package com.example.domain.SiGunguContent.vo;

import lombok.Data;

@Data
public class ContentType {
    private int contentTypeId;
    private String contentTypeName;
}
