package com.example.domain.SiGunguContent.vo;

import lombok.Data;

@Data
public class Sido {
    private int no;
    private int sidoCode;
    private String sidoName;

}
