package com.example.domain.tripdetail.dto;

import lombok.Data;

@Data
public class HashtagDto {
    private int hashtagId;
    private String hashtagContent;
}
